--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,22 @@
+## For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+#
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. For more details, visit
+# https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
+# org.gradle.parallel=true
+#Thu Nov 28 04:50:15 CET 2024
 android.enableJetifier=true
 android.useAndroidX=true
+default_compileSdkVersion=35
+default_googlePlayServicesWallet=19.4.0
+default_kotlinVersion=1.9.23
+default_minSdkVersion=21
+default_ndkversion=21.4.7075529
+default_targetSdkVersion=35
+default_appCompatVersion=1.7.0
