--- a/example/package.json
+++ b/example/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-google-pay": "file:../"
+    "react-native": "0.76.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,6 +28,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
