--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-google-pay": "file:../"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
